----------
v3.0.3-git
----------

[jan] Update French translation (Paul De Vlieger
      <paul.de_vlieger@moniut.univ-bpclermont.fr>).


------
v3.0.2
------

[jan] Update Basque translation (Ibon Igartua <ibon.igartua@ehu.es>).
[jan] Fix changing permissions for shared rulesets.


------
v3.0.1
------

[jan] Update Slovak translation (Jozef Sudolský <jozef.sudolsky@elbia.sk>).
[mms] Fix PHP error notification thrown if backends 'params' parameter was
      empty (Bug #11615).


------
v3.0.0
------

[mms] Add 'euser' option to 'transport_auth' hook allowing the effective user
      to be provided for the timsieved transport driver.


-----------
v3.0.0beta2
-----------

[mms] Add 'transport_auth' hook to handle defining authentication parameters
      for transport backends.
[mms] Remove session caching of rules.
[mms] Initial implementation of smartmobile view.
[mms] Disable blacklist, vacation, and whitelist API methods if the preference
      is locked.


-----------
v3.0.0beta1
-----------

[jan] Update icon set.
[mms] Fix javascript actions on the vacation page.


------------
v3.0.0alpha1
------------

[mms] When adding to blacklist/whitelist, remove added addresses from the
      other list.
[jan] Allow to use placeholder variables in vacation messages (Request #10316).
[mjr] Add ability to retrieve vacation message details from the API.
[jan] Validate start and end dates of vacation rules (Request #10879).


-------
v2.0.10
-------
[mms] Correctly reindex existing rules when deleting a rule and using the SQL
      filters storage driver.
[mms] Don't allow a user to save a rule with no matching conditions.


------
v2.0.9
------

[mms] Fix patch for filtering on combination fields (Bug #11197).
[mms] Procmail driver now explicitly sets the base Maildir directory by default
      (Bug #10113).
[jan] Update Turkish translation (İstanbul Technical University).


------
v2.0.8
------

[jan] Update Swedish translation (Per Olof Ljungmark <peo@bsdlabs.com>).